--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "jade": "1.9.x",
     "lodash": "^4.12.0",
     "mongoose": "4.1.x",
-    "socket.io": "1.4.x"
+    "socket.io": "1.4.x",
+    "winston": "2.2.x"
   },
   "devDependencies": {
     "nodemon": "1.3.x",
-    "morgan": "1.6.x",
-    "winston": "^2.1.1"
+    "morgan": "1.6.x"
   },
   "engines": {
     "node": "4.2.3"
